--- a/Japanizor/wwwroot/manifest.json
+++ b/Japanizor/wwwroot/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Japanizor",
   "start_url": "./",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#03173d",
+  "background_color": "#303030",
+  "theme_color": "#a249a4",
   "icons": [
     {
       "src": "icon-512.png",
